fixed overflow in edit task overlay

--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -70,35 +70,3 @@
         font-size: 32px;
     }
 }
-
-@media (max-width: 500px) {
-    #overlay_title {
-        font-size: 48px;
-    }
-
-    .priority-button {
-        padding: 10px 5px;
-    }
-
-    .priority-section {
-        padding: 8px;
-    }
-}
-
-@media (max-width: 420px) {
-    .priority-section {
-        flex-direction: column;
-    }
-
-    .action-buttons {
-        padding: 8px;
-    }
-
-    .action-buttons p {
-        font-size: 16px;
-    }
-
-    #task_subtask {
-        width: 100%;
-    }
-}
